# sdoc

./: .gitignore  Makefile  README.md  README.org  build.sh  sdoc.cabal
examples/: sample.md  sample.sdoc
src/: Html.hs  Latex.hs  Main.hs  Parser.hs  html.glos  latex.glos  main.glos  parser.glos
